# poetry_cookiecutter_template

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml  {{cookiecutter.gitignore}}
